[package]
name = "gj"
version = "0.1.0"
authors = ["Remy Wang <remywang@uw.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
rand = "0.7"
seahash = "4.0"
ahash = "0.3.8"
flame = "0.2.2"

[profile.release]
debug = true
